--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,19 @@
 * {
   scroll-behavior: smooth;
 }
+
+.mapouter {
+  position: relative;
+  text-align: right;
+  width: 100%;
+  height: 100%;
+}
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  width: 100%;
+  height: 100%;
+}
+.gmap_iframe {
+  height: 100% !important;
+}
